--- a/cursos/html_css/css_basico/index.html
+++ b/cursos/html_css/css_basico/index.html
@@ -11,32 +11,50 @@
     <div class="menu">
         <main>
             <h1>IGUANODRILLO STATIONERY</h1>
-            <p>Est. 2023</p>
-    
+            <p class="established">Est. 2023</p>
+            <hr>
             <section>
-                <h2>Cardboard</h2>
-                <article>
-                    <p class="article">Notebook</p>
-                    <p class="price">4.00</p>
+                <h2>Stationery</h2>
+                <img src="https://cdn-icons-png.flaticon.com/128/2011/2011173.png" alt="Stationery icon">
+                <article class="item">
+                    <p class="article">Notebook</p><p class="price">4.00</p>
                 </article>
-                <article>
-                    <p>Liquid Paper</p>
-                    <p>2.80</p>
+                <article class="item">
+                    <p class="article">Liquid Paper</p><p class="price">2.80</p>
                 </article>
-                <article>
-                    <p>Pen</p>
-                    <p>2.00</p>
+                <article class="item">
+                    <p class="article">Pen</p><p class="price">2.00</p>
                 </article>
-                <article>
-                    <p>ruler</p>
-                    <p>0.80</p>
+                <article class="item">
+                    <p class="article">ruler</p><p class="price">0.80</p>
                 </article>
-                <article>
-                    <p>Highlighter pen</p>
-                    <p>2.20</p>
+                <article class="item">
+                    <p class="article">Highlighter pen</p><p class="price">2.20</p>
                 </article>
             </section>
+
+            <section>
+                <h2>Perfumery and Cosmetics</h2>
+                <img src="https://cdn-icons-png.flaticon.com/128/860/860881.png" alt="Cosmetic icon">
+            </section>
+            <article class="item">
+                <p class="article">Lotion</p><p class="price">6.00</p>
+            </article>
+            <article class="item">
+                <p class="article">Splash</p><p class="price">3.50</p>
+            </article>
+            <article class="item">
+                <p class="article">Labial</p><p class="price">3.00</p>
+            </article>
+            <article class="item">
+                <p class="article">Nail polish</p><p class="price">2.50</p>
+            </article>
         </main>
+        <hr class="bottom-line">
+        <footer>
+            <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a></p>
+            <p class="address">123 Free Code Camp Drive</p>
+        </footer>
     </div>
     
 </body>
